--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "firebase/php-jwt": "^6.11",
         "dompdf/dompdf": "^3.1",
         "guzzlehttp/guzzle": "^7.4",
-        "h4cc/wkhtmltopdf-amd64": "0.12",
         "kreait/firebase-php": "^7.18",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.10",
         "laravel/ui": "^4.6",
-        "maatwebsite/excel": "^3.1",
-        "razorpay/razorpay": "^2.8"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
